include/xprs.h



/***************************************************************************\
 * Object and reference types                                              *
\***************************************************************************/
typedef struct XPRSobject_s *XPRSobject;

typedef struct xo_prob_struct* XPRSprob;

typedef struct XPRSmipsolpool_s* XPRSmipsolpool;

typedef struct xo_NameList* XPRSnamelist;

typedef struct XPRSmipsolenum_s* XPRSmipsolenum;


int XPRS_CC XPRS_ge_setcbmsghandler(int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);

int XPRS_CC XPRS_ge_getcbmsghandler(int (XPRS_CC **f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void** p);

int XPRS_CC XPRS_ge_addcbmsghandler(int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p, int priority);

int XPRS_CC XPRS_ge_removecbmsghandler(int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);


int XPRS_CC XPRS_msp_create(XPRSmipsolpool* msp);

int XPRS_CC XPRS_msp_destroy(XPRSmipsolpool msp);

int XPRS_CC XPRS_msp_probattach(XPRSmipsolpool msp, XPRSprob prob);

int XPRS_CC XPRS_msp_probdetach(XPRSmipsolpool msp, XPRSprob prob);

int XPRS_CC XPRS_msp_getsollist(XPRSmipsolpool msp, XPRSprob prob_to_rank_against, int iRankAttrib, int bRankAscending, int iRankFirstIndex_Ob, int iRankLastIndex_Ob, int iSolutionIds_Zb[], int* nReturnedSolIds, int* nSols);

int XPRS_CC XPRS_msp_getsollist2(XPRSmipsolpool msp, XPRSprob prob_to_rank_against, int iRankAttrib, int bRankAscending, int iRankFirstIndex_Ob, int iRankLastIndex_Ob, int bUseUserBitFilter, int iUserBitMask, int iUserBitPattern, int bUseInternalBitFilter, int iInternalBitMask, int iInternalBitPattern, int iSolutionIds_Zb[], int* nReturnedSolIds, int* nSols);

int XPRS_CC XPRS_msp_getsol(XPRSmipsolpool msp, int iSolutionId, int* iSolutionIdStatus_, double x[], int iColFirst, int iColLast, int* nValuesReturned);

int XPRS_CC XPRS_msp_getslack(XPRSmipsolpool msp, XPRSprob prob_to_rank_against, int iSolutionId, int* iSolutionIdStatus_, double slack[], int iRowFirst, int iRowLast, int* nValuesReturned);

int XPRS_CC XPRS_msp_loadsol(XPRSmipsolpool msp, int* iSolutionId, const double x[], int nCols, const char* sSolutionName, int* bNameModifiedForUniqueness, int* iSolutionIdOfExistingDuplicatePreventedLoad);

int XPRS_CC XPRS_msp_delsol(XPRSmipsolpool msp, int iSolutionId, int* iSolutionIdStatus_);

int XPRS_CC XPRS_msp_getintattribprobsol(XPRSmipsolpool msp, XPRSprob prob_to_rank_against, int iSolutionId, int* iSolutionIdStatus_, int iAttribId, int* Dst);

int XPRS_CC XPRS_msp_getdblattribprobsol(XPRSmipsolpool msp, XPRSprob prob_to_rank_against, int iSolutionId, int* iSolutionIdStatus_, int iAttribId, double* Dst);

int XPRS_CC XPRS_msp_getintattribprob(XPRSmipsolpool msp, XPRSprob prob, int iAttribId, int* Dst);

int XPRS_CC XPRS_msp_getdblattribprob(XPRSmipsolpool msp, XPRSprob prob, int iAttribId, double* Dst);

int XPRS_CC XPRS_msp_getintattribsol(XPRSmipsolpool msp, int iSolutionId, int* iSolutionIdStatus_, int iAttribId, int* Dst);

int XPRS_CC XPRS_msp_getdblattribsol(XPRSmipsolpool msp, int iSolutionId, int* iSolutionIdStatus_, int iAttribId, double* Dst);

int XPRS_CC XPRS_msp_getintcontrolsol(XPRSmipsolpool msp, int iSolutionId, int* iSolutionIdStatus_, int iControlId, int* Val);

int XPRS_CC XPRS_msp_getdblcontrolsol(XPRSmipsolpool msp, int iSolutionId, int* iSolutionIdStatus_, int iControlId, double* Val);

int XPRS_CC XPRS_msp_setintcontrolsol(XPRSmipsolpool msp, int iSolutionId, int* iSolutionIdStatus_, int iControlId, int Val);

int XPRS_CC XPRS_msp_setdblcontrolsol(XPRSmipsolpool msp, int iSolutionId, int* iSolutionIdStatus_, int iControlId, double Val);

int XPRS_CC XPRS_msp_getintattribprobextreme(XPRSmipsolpool msp, XPRSprob prob_to_rank_against, int bGet_Max_Otherwise_Min, int* iSolutionId, int iAttribId, int* ExtremeVal);

int XPRS_CC XPRS_msp_getdblattribprobextreme(XPRSmipsolpool msp, XPRSprob prob_to_rank_against, int bGet_Max_Otherwise_Min, int* iSolutionId, int iAttribId, double* ExtremeVal);

int XPRS_CC XPRS_msp_getintattrib(XPRSmipsolpool msp, int iAttribId, int* Val);

int XPRS_CC XPRS_msp_getdblattrib(XPRSmipsolpool msp, int iAttribId, double* Val);

int XPRS_CC XPRS_msp_getintcontrol(XPRSmipsolpool msp, int iControlId, int* Val);

int XPRS_CC XPRS_msp_getdblcontrol(XPRSmipsolpool msp, int iControlId, double* Val);

int XPRS_CC XPRS_msp_setintcontrol(XPRSmipsolpool msp, int iControlId, int Val);

int XPRS_CC XPRS_msp_setdblcontrol(XPRSmipsolpool msp, int iControlId, double Val);

int XPRS_CC XPRS_msp_setsolname(XPRSmipsolpool msp, int iSolutionId, const char* sNewSolutionBaseName, int* bNameModifiedForUniqueness, int* iSolutionIdStatus_);

int XPRS_CC XPRS_msp_getsolname(XPRSmipsolpool msp, int iSolutionId, char* _sname, int _iStringBufferBytes, int* _iBytesInInternalString, int* iSolutionIdStatus_);

int XPRS_CC XPRS_msp_findsolbyname(XPRSmipsolpool msp, const char* sSolutionName, int* iSolutionId);

int XPRS_CC XPRS_msp_writeslxsol(XPRSmipsolpool msp, XPRSprob prob_context, int iSolutionId, int* iSolutionIdStatus_, const char* sFileName, const char* sFlags);

int XPRS_CC XPRS_msp_readslxsol(XPRSmipsolpool msp, XPRSnamelist col_name_list, const char* sFileName, const char* sFlags, int* iSolutionId_Beg, int* iSolutionId_End);

int XPRS_CC XPRS_msp_getlasterror(XPRSmipsolpool msp, int* iMsgCode, char* _msg, int _iStringBufferBytes, int* _iBytesInInternalString);

int XPRS_CC XPRS_msp_setcbmsghandler(XPRSmipsolpool msp, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);

int XPRS_CC XPRS_msp_getcbmsghandler(XPRSmipsolpool msp, int (XPRS_CC **f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void** p);

int XPRS_CC XPRS_msp_addcbmsghandler(XPRSmipsolpool msp, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p, int priority);

int XPRS_CC XPRS_msp_removecbmsghandler(XPRSmipsolpool msp, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);


int XPRS_CC XPRS_nml_create(XPRSnamelist* r_nl);

int XPRS_CC XPRS_nml_destroy(XPRSnamelist nml);

int XPRS_CC XPRS_nml_getnamecount(XPRSnamelist nml, int* count);

int XPRS_CC XPRS_nml_getmaxnamelen(XPRSnamelist nml, int* namlen);

int XPRS_CC XPRS_nml_getnames(XPRSnamelist nml, int padlen, char buf[], int buflen, int* r_buflen_reqd, int firstIndex, int lastIndex);

int XPRS_CC XPRS_nml_addnames(XPRSnamelist nml, const char buf[], int firstIndex, int lastIndex);

int XPRS_CC XPRS_nml_removenames(XPRSnamelist nml, int firstIndex, int lastIndex);

int XPRS_CC XPRS_nml_findname(XPRSnamelist nml, const char* name, int* r_index);

int XPRS_CC XPRS_nml_copynames(XPRSnamelist dst, XPRSnamelist src);

int XPRS_CC XPRS_nml_getlasterror(XPRSnamelist nml, int* iMsgCode, char* _msg, int _iStringBufferBytes, int* _iBytesInInternalString);


int XPRS_CC XPRSgetqrowcoeff(XPRSprob prob, int irow, int icol, int jcol, double* dval);

int XPRS_CC XPRSgetqrowqmatrix(XPRSprob prob, int irow, int mstart[], int mclind[], double dobjval[], int maxcoeffs, int* ncoeffs, int first, int last);

int XPRS_CC XPRSgetqrowqmatrixtriplets(XPRSprob prob, int irow, int* nqelem, int mqcol1[], int mqcol2[], double dqe[]);

int XPRS_CC XPRSchgqrowcoeff(XPRSprob prob, int irow, int icol, int jcol, double dval);

int XPRS_CC XPRSgetqrows(XPRSprob prob, int* qmn, int qcrows[]);

int XPRS_CC XPRSaddqmatrix(XPRSprob prob, int irow, int nqtr, const int mqc1[], const int mqc2[], const double dqew[]);

int XPRS_CC XPRSdelqmatrix(XPRSprob prob, int irow);

int XPRS_CC XPRSloadqcqp(XPRSprob prob, const char* _sprobname, int ncols, int nrows, const char _srowtypes[], const double _drhs[], const double _drange[], const double _dobj[], const int _mstart[], const int _mnel[], const int _mrwind[], const double _dmatval[], const double _dlb[], const double _dub[], int nquads, const int _mqcol1[], const int _mqcol2[], const double _dqval[], int qmn, const int qcrows[], const int qcnquads[], const int qcmqcol1[], const int qcmqcol2[], const double qcdqval[]);

int XPRS_CC XPRSloadqcqpglobal(XPRSprob prob, const char* _sprobname, int ncols, int nrows, const char _srowtypes[], const double _drhs[], const double _drange[], const double _dobj[], const int _matbeg[], const int _matcnt[], const int _matrow[], const double _dmatval[], const double _dlb[], const double _dub[], int nquads, const int _mqcol1[], const int _mqcol2[], const double _dqval[], int qmn, const int qcrows[], const int qcnquads[], const int qcmqcol1[], const int qcmqcol2[], const double qcdqval[], const int ngents, const int nsets, const char qgtype[], const int mgcols[], const double dlim[], const char qstype[], const int msstart[], const int mscols[], const double dref[]);

int XPRS_CC XPRS_mse_setcbmsghandler(XPRSmipsolenum mse, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);

int XPRS_CC XPRS_mse_getcbmsghandler(XPRSmipsolenum mse, int (XPRS_CC **f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void** p);

int XPRS_CC XPRS_mse_addcbmsghandler(XPRSmipsolenum mse, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p, int priority);

int XPRS_CC XPRS_mse_removecbmsghandler(XPRSmipsolenum mse, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);