include/xprs.bas


Declare PtrSafe Function XPRS_msp_create Lib "XPRS.DLL" (ByRef msp As LongPtr) As Long
Declare PtrSafe Function XPRS_msp_destroy Lib "XPRS.DLL" (ByVal msp As LongPtr) As Long
Declare PtrSafe Function XPRS_msp_probattach Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal prob As LongPtr) As Long
Declare PtrSafe Function XPRS_msp_probdetach Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal prob As LongPtr) As Long
Declare PtrSafe Function XPRS_msp_getsollist Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal prob_to_rank_against As LongPtr, ByVal iRankAttrib As Long, ByVal bRankAscending As Long, ByVal iRankFirstIndex_Ob As Long, ByVal iRankLastIndex_Ob As Long, iSolutionIds_Zb As Long, ByRef nReturnedSolIds As Long, ByRef nSols As Long) As Long
Declare PtrSafe Function XPRS_msp_getsollist2 Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal prob_to_rank_against As LongPtr, ByVal iRankAttrib As Long, ByVal bRankAscending As Long, ByVal iRankFirstIndex_Ob As Long, ByVal iRankLastIndex_Ob As Long, ByVal bUseUserBitFilter As Long, ByVal iUserBitMask As Long, ByVal iUserBitPattern As Long, ByVal bUseInternalBitFilter As Long, ByVal iInternalBitMask As Long, ByVal iInternalBitPattern As Long, iSolutionIds_Zb As Long, ByRef nReturnedSolIds As Long, ByRef nSols As Long) As Long
Declare PtrSafe Function XPRS_msp_getsol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal iSolutionId As Long, ByRef iSolutionIdStatus_ As Long, x As Double, ByVal iColFirst As Long, ByVal iColLast As Long, ByRef nValuesReturned As Long) As Long
Declare PtrSafe Function XPRS_msp_getslack Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal prob_to_rank_against As LongPtr, ByVal iSolutionId As Long, ByRef iSolutionIdStatus_ As Long, slack As Double, ByVal iRowFirst As Long, ByVal iRowLast As Long, ByRef nValuesReturned As Long) As Long
Declare PtrSafe Function XPRS_msp_loadsol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByRef iSolutionId As Long, x As Double, ByVal nCols As Long, ByVal sSolutionName As String, ByRef bNameModifiedForUniqueness As Long, ByRef iSolutionIdOfExistingDuplicatePreventedLoad As Long) As Long
Declare PtrSafe Function XPRS_msp_delsol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal iSolutionId As Long, ByRef iSolutionIdStatus_ As Long) As Long
Declare PtrSafe Function XPRS_msp_getintattribprobsol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal prob_to_rank_against As LongPtr, ByVal iSolutionId As Long, ByRef iSolutionIdStatus_ As Long, ByVal iAttribId As Long, ByRef Dst As Long) As Long
Declare PtrSafe Function XPRS_msp_getdblattribprobsol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal prob_to_rank_against As LongPtr, ByVal iSolutionId As Long, ByRef iSolutionIdStatus_ As Long, ByVal iAttribId As Long, ByRef Dst As Double) As Long
Declare PtrSafe Function XPRS_msp_getintattribprob Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal prob As LongPtr, ByVal iAttribId As Long, ByRef Dst As Long) As Long
Declare PtrSafe Function XPRS_msp_getdblattribprob Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal prob As LongPtr, ByVal iAttribId As Long, ByRef Dst As Double) As Long
Declare PtrSafe Function XPRS_msp_getintattribsol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal iSolutionId As Long, ByRef iSolutionIdStatus_ As Long, ByVal iAttribId As Long, ByRef Dst As Long) As Long
Declare PtrSafe Function XPRS_msp_getdblattribsol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal iSolutionId As Long, ByRef iSolutionIdStatus_ As Long, ByVal iAttribId As Long, ByRef Dst As Double) As Long
Declare PtrSafe Function XPRS_msp_getintcontrolsol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal iSolutionId As Long, ByRef iSolutionIdStatus_ As Long, ByVal iControlId As Long, ByRef Val As Long) As Long
Declare PtrSafe Function XPRS_msp_getdblcontrolsol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal iSolutionId As Long, ByRef iSolutionIdStatus_ As Long, ByVal iControlId As Long, ByRef Val As Double) As Long
Declare PtrSafe Function XPRS_msp_setintcontrolsol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal iSolutionId As Long, ByRef iSolutionIdStatus_ As Long, ByVal iControlId As Long, ByVal Val As Long) As Long
Declare PtrSafe Function XPRS_msp_setdblcontrolsol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal iSolutionId As Long, ByRef iSolutionIdStatus_ As Long, ByVal iControlId As Long, ByVal Val As Double) As Long
Declare PtrSafe Function XPRS_msp_getintattribprobextreme Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal prob_to_rank_against As LongPtr, ByVal bGet_Max_Otherwise_Min As Long, ByRef iSolutionId As Long, ByVal iAttribId As Long, ByRef ExtremeVal As Long) As Long
Declare PtrSafe Function XPRS_msp_getdblattribprobextreme Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal prob_to_rank_against As LongPtr, ByVal bGet_Max_Otherwise_Min As Long, ByRef iSolutionId As Long, ByVal iAttribId As Long, ByRef ExtremeVal As Double) As Long
Declare PtrSafe Function XPRS_msp_getintattrib Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal iAttribId As Long, ByRef Val As Long) As Long
Declare PtrSafe Function XPRS_msp_getdblattrib Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal iAttribId As Long, ByRef Val As Double) As Long
Declare PtrSafe Function XPRS_msp_getintcontrol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal iControlId As Long, ByRef Val As Long) As Long
Declare PtrSafe Function XPRS_msp_getdblcontrol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal iControlId As Long, ByRef Val As Double) As Long
Declare PtrSafe Function XPRS_msp_setintcontrol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal iControlId As Long, ByVal Val As Long) As Long
Declare PtrSafe Function XPRS_msp_setdblcontrol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal iControlId As Long, ByVal Val As Double) As Long
Declare PtrSafe Function XPRS_msp_setsolname Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal iSolutionId As Long, ByVal sNewSolutionBaseName As String, ByRef bNameModifiedForUniqueness As Long, ByRef iSolutionIdStatus_ As Long) As Long
Private Declare PtrSafe Function XPRS_msp_getsolname_C Lib "XPRS.DLL" Alias "XPRS_msp_getsolname" (ByVal msp As LongPtr, ByVal iSolutionId As Long, ByVal sname As String, ByVal iStringBufferBytes As Long, ByRef iBytesInInternalString As Long, ByRef iSolutionIdStatus_ As Long) As Long
Declare PtrSafe Function XPRS_msp_findsolbyname Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal sSolutionName As String, ByRef iSolutionId As Long) As Long
Declare PtrSafe Function XPRS_msp_writeslxsol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal prob_context As LongPtr, ByVal iSolutionId As Long, ByRef iSolutionIdStatus_ As Long, ByVal sFileName As String, ByVal sFlags As String) As Long
Declare PtrSafe Function XPRS_msp_readslxsol Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal col_name_list As LongPtr, ByVal sFileName As String, ByVal sFlags As String, ByRef iSolutionId_Beg As Long, ByRef iSolutionId_End As Long) As Long
Private Declare PtrSafe Function XPRS_msp_getlasterror_C Lib "XPRS.DLL" Alias "XPRS_msp_getlasterror" (ByVal msp As LongPtr, ByRef iMsgCode As Long, ByVal msg As String, ByVal iStringBufferBytes As Long, ByRef iBytesInInternalString As Long) As Long
Declare PtrSafe Function XPRS_msp_setcbmsghandler Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal f_msghandler As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRS_msp_getcbmsghandler Lib "XPRS.DLL" (ByVal msp As LongPtr, ByRef f_msghandler As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRS_msp_addcbmsghandler Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal f_msghandler As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRS_msp_removecbmsghandler Lib "XPRS.DLL" (ByVal msp As LongPtr, ByVal f_msghandler As LongPtr, ByVal p As String) As Long

Declare PtrSafe Function XPRS_nml_create Lib "XPRS.DLL" (ByRef r_nl As LongPtr) As Long
Declare PtrSafe Function XPRS_nml_destroy Lib "XPRS.DLL" (ByVal nml As LongPtr) As Long
Declare PtrSafe Function XPRS_nml_getnamecount Lib "XPRS.DLL" (ByVal nml As LongPtr, ByRef count As Long) As Long
Declare PtrSafe Function XPRS_nml_getmaxnamelen Lib "XPRS.DLL" (ByVal nml As LongPtr, ByRef namlen As Long) As Long
Declare PtrSafe Function XPRS_nml_getnames Lib "XPRS.DLL" (ByVal nml As LongPtr, ByVal padlen As Long, buf As Byte, ByVal buflen As Long, ByRef r_buflen_reqd As Long, ByVal firstIndex As Long, ByVal lastIndex As Long) As Long
Declare PtrSafe Function XPRS_nml_addnames Lib "XPRS.DLL" (ByVal nml As LongPtr, buf As Byte, ByVal firstIndex As Long, ByVal lastIndex As Long) As Long
Declare PtrSafe Function XPRS_nml_removenames Lib "XPRS.DLL" (ByVal nml As LongPtr, ByVal firstIndex As Long, ByVal lastIndex As Long) As Long
Declare PtrSafe Function XPRS_nml_findname Lib "XPRS.DLL" (ByVal nml As LongPtr, ByVal name As String, ByRef r_index As Long) As Long
Declare PtrSafe Function XPRS_nml_copynames Lib "XPRS.DLL" (ByVal dst As LongPtr, ByVal src As LongPtr) As Long
Private Declare PtrSafe Function XPRS_nml_getlasterror_C Lib "XPRS.DLL" Alias "XPRS_nml_getlasterror" (ByVal nml As LongPtr, ByRef iMsgCode As Long, ByVal msg As String, ByVal iStringBufferBytes As Long, ByRef iBytesInInternalString As Long) As Long

Declare PtrSafe Function XPRSgetqrowcoeff Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal irow As Long, ByVal icol As Long, ByVal jcol As Long, ByRef dval As Double) As Long
Declare PtrSafe Function XPRSgetqrowqmatrix Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal irow As Long, mstart As Long, mclind As Long, dobjval As Double, ByVal maxcoeffs As Long, ByRef ncoeffs As Long, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSgetqrowqmatrixtriplets Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal irow As Long, ByRef nqelem As Long, mqcol1 As Long, mqcol2 As Long, dqe As Double) As Long
Declare PtrSafe Function XPRSchgqrowcoeff Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal irow As Long, ByVal icol As Long, ByVal jcol As Long, ByVal dval As Double) As Long
Declare PtrSafe Function XPRSgetqrows Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef qmn As Long, qcrows As Long) As Long
Declare PtrSafe Function XPRSaddqmatrix Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal irow As Long, ByVal nqtr As LongLong, mqc1 As Long, mqc2 As Long, dqew As Double) As Long
Declare PtrSafe Function XPRSdelqmatrix Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal irow As Long) As Long
Declare PtrSafe Function XPRSloadqcqp Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sprobname As String, ByVal ncols As Long, ByVal nrows As Long, srowtypes As Byte, drhs As Double, drange As Double, dobj As Double, mstart As Long, mnel As Long, mrwind As Long, dmatval As Double, dlb As Double, dub As Double, ByVal nquads As LongLong, mqcol1 As Long, mqcol2 As Long, dqval As Double, ByVal qmn As Long, qcrows As Long, qcnquads As Long, qcmqcol1 As Long, qcmqcol2 As Long, qcdqval As Double) As Long
Declare PtrSafe Function XPRSloadqcqpglobal Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sprobname As String, ByVal ncols As Long, ByVal nrows As Long, srowtypes As Byte, drhs As Double, drange As Double, dobj As Double, matbeg As Long, matcnt As Long, matrow As Long, dmatval As Double, dlb As Double, dub As Double, ByVal nquads As LongLong, mqcol1 As Long, mqcol2 As Long, dqval As Double, ByVal qmn As Long, qcrows As Long, qcnquads As Long, qcmqcol1 As Long, qcmqcol2 As Long, qcdqval As Double, ByVal ngents As Long, ByVal nsets As Long, qgtype As Byte, mgcols As Long, dlim As Double, qstype As Byte, msstart As Long, mscols As Long, dref As Double) As Long
